# ContainerManip

./: .clang-format  .clang-tidy  .gitignore  .gitreview  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: enumerate.hpp  range.hpp  zip.hpp
src/range/: GenericIndexBasedRangeContainer.hpp  impl.hpp
src/zip/: impl.hpp
test/: OperandPresence.hpp  range.cpp  zip.cpp
